@@ -1,9 +1,10 @@
 @echo off
 set MAX_RAM=5G
 set JAR=forge-1.16.5-36.2.34.jar
+set JAVA="C:\Program Files\Java\jdk1.8.0_322.6\bin\java.exe"
 
-java -Xmx%MAX_RAM% ^
---add-exports=java.base/sun.security.util=ALL-UNNAMED ^
---add-opens=java.base/java.util.jar=ALL-UNNAMED ^
---add-opens=java.base/java.lang=ALL-UNNAMED ^
+
+%JAVA% -Xmx%MAX_RAM% ^
+-Dmixin.debug.export=true ^
+-Dmixin.debug.verbose=true ^
 -jar %JAR% nogui
